--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,4 +33,4 @@ jobs:
         echo test, and deploy your project.
 
     - name: GetData
-      run: . ./GetData.bash
+      run: . ~/GetData.bash
