--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,4 +44,4 @@ jobs:
         source ./src/config.properties
         echo "${mState}"
         echo "${mCounty}"
-        source ./src/GetData.bash
+        source ./src/GetData.bash >> ./out/output_$(date --utc +%Y%m%d_%H%M%S.%NZ).out
